fix spacing

--- a/index.css
+++ b/index.css
@@ -2,6 +2,9 @@ body {
   font-family: Helvetica, arial, freesans, clean, sans-serif;
   font-size: 14px;
   line-height: 130%;
+}
+
+body > p {
   width: 95%;
 }
 
